[package]
name = "cashmere"
authors = ["Kent Ross <k@mad.cash>"]
version = "0.0.1"
edition = "2021"

description = "Spatial search trees with a focus on online mutability, speed, performance guarantees, and flexibility"
license = "MIT"
keywords = ["nearest-neighbor", "knn", "kd-tree", "kd", "kdtree"]
categories = ["algorithms", "data-structures"]
readme = "README.md"

[dependencies]
num-traits = "0.2.17"

[features]
full_validation = []
