[package]
name = "cashmere"
authors = ["Kent Ross <k@mad.cash>"]
version = "0.0.1"
edition = "2021"
resolver = "2"

description = "Spatial search trees with a focus on online mutability, speed, performance guarantees, and flexibility"
license = "MIT"
keywords = ["nearest-neighbor", "knn", "kd-tree", "kd", "kdtree"]
categories = ["algorithms", "data-structures"]
readme = "README.md"

[dependencies]
num-traits = "0.2.17"

[dev-dependencies]
cashmere = { path = "../cashmere" }
clap = { version = "4.4.7", features = ["derive", "env", "unicode"] }
coarsetime = "0.1.29"
kdtree = "0.7.0"
kiddo = "3.0.0-rc.1"
num-traits = "0.2.17"
png = "0.17.10"
rand = "0.8.5"
sha2 = { version = "0.10.8", features = ["asm"] }

[features]
full_validation = []
